# Tistory

./: .gitignore
nRF52/ble_example/: workspace.code-workspace
nRF52/ble_example/aws_iot/: prj.conf
nRF52/ble_example/central_and_peripheral_hr/: prj.conf
nRF52/ble_example/central_bas/: prj.conf
nRF52/ble_example/central_hr_coded/: prj.conf
nRF52/ble_example/central_smp_client/: prj.conf
nRF52/ble_example/central_uart/: prj.conf
nRF52/ble_example/hci_lpuart/: CMakeLists.txt  prj.conf
nRF52/ble_example/peripheral_hr_coded/: prj.conf
nRF52/ble_example/smp_svr/: prj.conf
nRF52/bootloader_example/: priv_ecdsa_p256.pem
nRF52/bootloader_example/ble_dfu/: CMakeLists.txt  priv.pem  prj.conf
nRF52/bootloader_example/ble_dfu/src/: main.c  spatch_battery.c  spatch_battery.h  spatch_ecg.c  spatch_ecg.h  spatch_hr.c  spatch_hr.h
nRF52/bootloader_example/hello_world/: priv_a.pem  priv_b.pem  prj.conf  pub.pem  pub_a.pem  pub_b.pem
nRF52/crypto_example/sha256/: prj.conf
nRF52/example/: workspace.code-workspace
nRF52/example/blinky/src/: main.c
nRF52/example/blinky_pwm/: nrf52833dk_nrf52833.overlay
nRF52/example/fat_fs/: nrf52833dk_nrf52833.overlay
nRF52/zephyr_example/: workspace.code-workspace
nRF91/: README.md
nRF91/certificate/: e6de110616b4c5ad210d754361c5fc1aed90766fa2b911b6f8a8d5f839e4ad20-certificate.pem.crt  e6de110616b4c5ad210d754361c5fc1aed90766fa2b911b6f8a8d5f839e4ad20-private.pem.key  e6de110616b4c5ad210d754361c5fc1aed90766fa2b911b6f8a8d5f839e4ad20-public.pem.key  nrf-351358815320194.cert.json
nRF91/example/: workspace.code-workspace
(+33 files in other folders)
